<resources>
    <string name="app_name">Higher Lower</string>
    <string name="guess_if_the_next_throw_is_going_to_be_lower_equal_or_higher">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="lower">Lower</string>
    <string name="higher">Higher</string>
    <string name="equal">Equal</string>
    <string name="dice">dice</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="last_throw">last throw: %d</string>
</resources>
